--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Stock Calculator</title>
     <link href="styles.css" rel="stylesheet">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+    <link rel="shortcut icon" href="#">
 </head>
 <body>
     <div id="container">
