--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 <a href="https://www.linkedin.com/in/kotha-shresta-230243236" class="fa fa-linkedin"></a>
-<a href="https://instgram.com/kotha.shresta02" class="fa fa-instagram"></a>
+<a href="https://instagram.com/kotha.shresta02" class="fa fa-instagram"></a>
 <a href="https://github.com/shrestakotha" class="fa fa-github"></a>
 
 
